	gtk/display/Label.chs, gtk/abstract/Misc.chs, gtk/abstract/Paned.chs,
	gtk/abstract/Range.chs, gtk/abstract/Scale.chs: add missing functions.
	Also fix a couple typo bugs and tidy up some documentation.

	* gtk/layout/api.ignore, gtk/misc/api.ignore, gtk/treeList/api.ignore
	gtk/windows/api.ignore, gtk/abstract/api.ignore: updated with more
	deprecated functions to ignore.

2004-07-30  Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/entry/Editable.chs, gtk/entry/Entry.chs: split off editable
	functions into separate module and make Entry an instance of the
	EditableClass. Also add missing functions.

	* gtk/entry/SpinButton.chs: make SpinButton an EditableClass instance.

	* tools/hierarchyGen/hierarchy.list: add GtkEditable as an interface.

	* gtk/general/Gtk.hs: export new Editable module.

	* gtk/buttons/Button.chs, gtk/menuComboToolbar/CheckMenuItem.chs,
	gtk/misc/Calendar.chs, gtk/misc/EventBox.chs, gtk/misc/HandleBox.chs
	gtk/entry/HScale, gtk/entry/VScale, gtk/ornaments/Frame.chs,
	gtk/treeList/CellRendererToggle.chs: add missing functions.

	* gtk/general/Structs.hsc: remove unneeded CheckMenuItem function.

	* gtk/misc/api.ignore, gtk/treeList/api.ignore, gtk/entry/api.ignore
	gtk/abstract/api.ignore, gtk/general/api.ignore, gtk/windows/api.ignore
	gtk/menuComboToolbar/api.ignore, gtk/layout/api.ignore: new files to
	mark unbound functions, for use with the api coverage tool.

	* tools/apicoverage/Makefile: filter gtk.coverage too to reduce noise.
	This ignores where we are currently implementing deprecated functions.

2004-07-29  Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/general/General.chs: don't use depreciated gtk main loop
	functions to install timout and idle handlers, use glib equivalents.

	* demo/filechooser/Makefile: FileChooserDemo.glade in EXTRA_TARFILES.

	* gtk/abstract/FileChooser.chs: instance FileChooserError GErrorClass

	* gtk2hs/gtk/abstract/Box.chs, gtk/misc/Adjustment.chs,